[gd_scene load_steps=7 format=2]

[ext_resource path="res://recursos/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://juego/menus/MenuPausa.gd" type="Script" id=2]
[ext_resource path="res://juego/menus/Salir.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.627451, 0.921569, 1 )
border_width_bottom = 6
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_bottom = 6
border_color = Color( 1, 1, 1, 1 )

[node name="MenuPausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.584314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.478431, 0.00392157, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -222.0
margin_right = 268.0
margin_bottom = 222.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.5
margin_top = -163.5
margin_right = 228.5
margin_bottom = 163.5
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continuar" type="Button" parent="Panel/VBoxContainer"]
margin_right = 457.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPrincipal" type="Button" parent="Panel/VBoxContainer"]
margin_top = 107.0
margin_right = 457.0
margin_bottom = 203.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "menu principal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 215.0
margin_right = 457.0
margin_bottom = 219.0

[node name="Salir" type="Button" parent="Panel/VBoxContainer"]
margin_top = 231.0
margin_right = 457.0
margin_bottom = 327.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 2 )
text = "Salir"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/VBoxContainer/Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MenuPrincipal" to="." method="_on_MenuPrincipal_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Salir" to="Panel/VBoxContainer/Salir" method="_on_pressed"]
